--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -40,9 +40,9 @@ ul { list-style: none; }
 
 <p >Hold down any key to record a command.</p>
 
-<!-- debugging 
+
 <ul id="recordingslist"></ul>
--->
+
 <pre id="logpersistent"></pre>
 	
 	
@@ -208,7 +208,7 @@ function stopRecording() {
   forwardRecording();
   
   // wav conversion in here
-  //showRecording();	
+  showRecording();	
 	
 	recorder.clear();
 }
