--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -41,7 +41,7 @@ ul { list-style: none; }
 <p >Hold down any key to record a command.</p>
 
 
-<ul id="recordingslist"></ul>
+<!-- <ul id="recordingslist"></ul> -->
 
 <pre id="logpersistent"></pre>
 	
@@ -208,7 +208,7 @@ function stopRecording() {
   forwardRecording();
   
   // wav conversion in here
-  showRecording();	
+  //showRecording();	
 	
 	recorder.clear();
 }
