--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -89,7 +89,7 @@ function __transcript(e) {
     document.getElementById("transcript").innerHTML = 'You: \"' + e + '\"';
   }
 function __response(e) {
-    document.getElementById("response").innerHTML = 'IX: ' + e;
+    document.getElementById("response").innerHTML = 'IX: \"' + e + '\"';
   }
 function __status(e) {
     document.getElementById("status").innerHTML = e;
