--- a/ui/static/ui/main.css
+++ b/ui/static/ui/main.css
@@ -2,9 +2,8 @@
 .dropzone {
     height: 200px;
     width: 100%;
-    border: solid 1px white;
+    border: dashed 1px red;
     background-color: lightblue;
-    border-radius: 20px;
 }   
 
 p.results {
@@ -41,7 +40,6 @@ ul {
     width: 600px;
     border: solid 1px #ccc;
     display: table-cell;
-    border-radius: 20px;
 }
 
 #debugContainer {
