--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -19,6 +19,7 @@
 <script src="{% static 'ui/recorder.js' %}"></script>
 <script src="{% static 'ui/dropzone.js' %}"></script>
 <script src="{% static 'ui/baseencoding.js' %}"></script>
+<script type="text/javascript" src="{% static 'ui/getUserMedia.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'ui/recording.js' %}"></script>
 <script type="text/javascript" src="{% static 'ui/processing.js' %}"></script>
 
@@ -36,7 +37,7 @@
     </form>
     {% endblock %}
     <div id="uploaded-file">
-        No file uploaded. Using default file <b></b>.
+        No file uploaded. Using default file <a><b></b></a>.
     </div>
     <div id="record-instruction-container">
         Hold down any key to record a command.
@@ -68,6 +69,7 @@
     </dl>
 </div>
 <div id="debugContainer">
+    <div id="media-content"></div>
     <ul id="recordingslist"></ul>
     <pre id="logpersistent"></pre>
     <!-- debugging -->
