going live with more supported queries and en-GB

--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -38,7 +38,7 @@
     {% endblock %}
     <div id="record-instruction-container">
         <div id="microphone-icon" class="icon-mc-off"></div>
-        <div>Hold down any key to record a command.</div>
+        <div>Hold down any key to record a command. Please use fuller sentences e.g. '<i>Can you tell me the number of wells.</i>'</div>
     </div>
     <div id="loading-icon">
         <img alt="Loading..." src="{% static 'ui/spin.svg' %}" />
