--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
 <meta http-equiv="Pragma" content="no-cache"/>
 <meta http-equiv="Expires" content="0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>The Pequod</title>
 
@@ -38,7 +39,7 @@
     {% endblock %}
     <div id="record-instruction-container">
         <div id="microphone-icon" class="icon-mc-off"></div>
-        <div>Hold down any key to record a command. Please use fuller sentences e.g. '<i>Can you tell me the number of wells.</i>'</div>
+        <div><span id="record-prompt">Hold down any key</span> to record a command.</span> Please use fuller sentences e.g. '<i>Can you tell me the number of wells.</i>'</div>
     </div>
     <div id="loading-icon">
         <img alt="Loading..." src="{% static 'ui/spin.svg' %}" />
